# clinok

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yaml  clang_new_version.yaml  windows.yaml
examples/: CMakeLists.txt  main.cpp  point.hpp  program_options.def
include/: cli_interface.hpp
include/clinok/: cli.hpp  cli_interface.hpp  descriptor_field.hpp  descriptor_type.hpp  generate.hpp  type_descriptor.hpp  utils.hpp
src/clinok/: utils.cpp
tests/: CMakeLists.txt  program2_options.def  program3_options.def  program_options.def  test.cpp  test_clinok.cpp
